fix on width too large

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,6 +11,7 @@ html, body {
 
 .section {
   position: relative;
+  overflow: hidden;
 }
 
 .first-section {
